[Refactoring] Applied more code suggestions and ran code optimisation over more files